[tool.poetry]
name = "repl-nix-th1nksms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_th1nksms"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
